# homepage

./: Cargo.toml
assets/: script.js  styles.css
settings/: base.toml
src/: constants.rs  error.rs  main.rs
src/config/: mod.rs  wallpaper.rs
src/state/: cache.rs  mod.rs
src/web/: home_route.rs  mod.rs  wallpaper_route.rs
templates/: index.html
