[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
config = "0.13.4"
project-root = "0.2.2"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
